2008-12-28  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/pascal.lang:
	Add the missing words. (Fixes bug #565789).

=== gtksourceview 2.5.1 ===

2008-12-26  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.1

2008-12-20  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/pascal.lang:
	Add several words to highlight. (Fixes bug #565172)

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gtksourceview/language-specs/vala.lang: add owned, unowned,
	yield, and yields to keyword list

2008-12-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceview.c
	(gtk_source_view_get_mark_category_pixbuf): do not call
	g_object_ref() on a NULL. Bug #564714, patch by Mike Spivey.

2008-12-12  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/awk.lang:
	Add builtin functions to awk lang file. Fixes bug #564242.

2008-12-12  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

        * gtksourceview/gtksourcestylescheme.c:
        Typo in property. Fixes bug #564225.

2008-12-10  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcelanguage.c: fix cut and paste error
	causing wrong values in gobject properties. Bug #564142.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/pascal.lang:
	Add downto highlight. Fixes bug #563271.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/dtd.lang:
	* gtksourceview/language-specs/po.lang:
	* gtksourceview/language-specs/m4.lang:
	* gtksourceview/language-specs/changelog.lang:
	* gtksourceview/language-specs/xslt.lang:
	* gtksourceview/language-specs/makefile.lang:
	* gtksourceview/language-specs/gap.lang:
	* gtksourceview/language-specs/yacc.lang:
	Mark strings for translation.

2008-12-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/vala.lang: